--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Install flet
+      run: pip install flet
+
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
@@ -76,6 +79,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Install flet
+      run: pip install flet
+
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
@@ -111,6 +117,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Install flet
+      run: pip install flet
+
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
@@ -145,6 +154,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Install flet
+      run: pip install flet
 
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
@@ -183,6 +195,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Install flet
+      run: pip install flet
 
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
@@ -224,6 +239,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Install flet
+      run: pip install flet
 
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
