--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Build Flet APK
 
 on:
   push:
@@ -10,8 +10,8 @@ on:
 env:
   BUILD_NUMBER: 1
   BUILD_VERSION: 1.0.0
-  PYTHON_VERSION: 3.12.2
-  FLUTTER_VERSION: 3.22.2
+  PYTHON_VERSION: 3.10  # Python 3.10 أكثر استقراراً مع Flet
+  FLUTTER_VERSION: 3.22.2  # أو أحدث إصدار مستقر
 
 jobs:
   build-apk:
@@ -21,45 +21,54 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Python
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: Update and install tkinter on Ubuntu
+    - name: Install system dependencies
       run: |
         sudo apt-get update -y
-        sudo apt-get install -y python3-tk
+        sudo apt-get install -y \
+          python3-tk \
+          libgtk-3-dev \
+          openjdk-17-jdk  # JDK 17 مطلوب لـ Flutter
+        sudo apt-get clean
 
-    - name: Install Python Dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install flet deep_translator
 
-    - name: Setup Flutter
+    - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
         flutter-version: ${{ env.FLUTTER_VERSION }}
+        channel: stable
 
-    - name: Setup Java JDK
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '21'
-
-    - name: Install Flet CLI
+    - name: Accept Android licenses
       run: |
-        python3 -m pip install flet
+        flutter doctor --android-licenses --verbose
+        yes | sdkmanager --licenses || true
 
-    - name: Flet Build APK
+    - name: Set up Android SDK
       run: |
-        flutter config --no-analytics
-        flet build apk --verbose --build-number=$BUILD_NUMBER --build-version=$BUILD_VERSION
+        echo "y" | flutter doctor --android-licenses
+        flutter config --android-sdk "$ANDROID_HOME"
 
-    - name: Upload APK Artifact
+    - name: Verify environment
+      run: flutter doctor -v
+
+    - name: Build APK with Flet
+      run: |
+        flet build apk \
+          --build-number ${{ env.BUILD_NUMBER }} \
+          --build-version ${{ env.BUILD_VERSION }} \
+          --verbose
+
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
-        name: apk-build-artifact
-        path: build/apk
-        if-no-files-found: warn
-        overwrite: false
+        name: app-release
+        path: build/app/outputs/flutter-apk/*.apk
+        retention-days: 7
