--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,13 @@ name: Build Flet APK
 on:
   push:
     branches: [master, main]
-  pull_request:
-    branches: [master, main]
   workflow_dispatch:
 
 env:
   BUILD_NUMBER: 1
   BUILD_VERSION: 1.0.0
-  PYTHON_VERSION: 3.10  # Python 3.10 أكثر استقراراً مع Flet
-  FLUTTER_VERSION: 3.22.2  # أو أحدث إصدار مستقر
+  PYTHON_VERSION: "3.10"  # استخدام إصدار مدعوم
+  FLUTTER_VERSION: "3.22.2"
 
 jobs:
   build-apk:
@@ -21,7 +19,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Set up Python ${{ env.PYTHON_VERSION }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
@@ -32,12 +30,22 @@ jobs:
         sudo apt-get install -y \
           python3-tk \
           libgtk-3-dev \
-          openjdk-17-jdk  # JDK 17 مطلوب لـ Flutter
+          openjdk-17-jdk \
+          build-essential \
+          zlib1g-dev \
+          libncurses5-dev \
+          libgdbm-dev \
+          libnss3-dev \
+          libssl-dev \
+          libsqlite3-dev \
+          libreadline-dev \
+          libffi-dev \
+          libbz2-dev
         sudo apt-get clean
 
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools wheel
         pip install flet deep_translator
 
     - name: Set up Flutter
@@ -46,15 +54,13 @@ jobs:
         flutter-version: ${{ env.FLUTTER_VERSION }}
         channel: stable
 
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+
     - name: Accept Android licenses
       run: |
-        flutter doctor --android-licenses --verbose
-        yes | sdkmanager --licenses || true
-
-    - name: Set up Android SDK
-      run: |
-        echo "y" | flutter doctor --android-licenses
-        flutter config --android-sdk "$ANDROID_HOME"
+        yes | sdkmanager --licenses
+        flutter doctor --android-licenses
 
     - name: Verify environment
       run: flutter doctor -v
@@ -71,4 +77,3 @@ jobs:
       with:
         name: app-release
         path: build/app/outputs/flutter-apk/*.apk
-        retention-days: 7
